[fix] word-wrap per le task

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@ body{
     background-color: rgb(248, 234, 220);
     border: 2px solid black;
     box-shadow: 0 0 20px black;
-    
-}
+}   
 
 .task-container{
     height: 100vh;
@@ -26,8 +25,6 @@ body{
     align-items: center;
 }
 
-/* done button */
-
 .done{
     background-color: green;
 }
@@ -39,9 +36,14 @@ body{
 .text-undone{
     text-decoration: underline;
     font-weight: bold;
+    word-wrap: break-word;
+    white-space: normal;
 }
 
 .text-done{
     text-decoration: line-through;
+    word-wrap: break-word;
+    white-space: normal;
 }
+
 
